yaml/default.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ${NAMESPACE}

---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: ${NAMESPACE}
  name: ${APPLICATION}
  labels:
    app: ${APPLICATION}
    run: ${ENVIRONMENT}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ${APPLICATION}
      run: ${ENVIRONMENT}
  template:
    metadata:
      labels:
        app: ${APPLICATION}
        run: ${ENVIRONMENT}
    spec:
      containers:
      - name: ${APPLICATION}-container
        image: ${DOCKER_IMAGE}
        ports:
        - name: http
          containerPort: ${BACKEND_PORT}

---
kind: Service
apiVersion: v1
metadata:
  namespace: ${NAMESPACE}
  name: ${APPLICATION}-svc
  labels:
    app: ${APPLICATION}
    run: ${ENVIRONMENT}
spec:
  type: NodePort
  selector:
    app: ${APPLICATION}
    run: ${ENVIRONMENT}
  ports:
  - name: http
    port: ${BACKEND_PORT}

#---
#kind: Ingress
#apiVersion: extensions/v1beta1
#metadata:
#  namespace: ${NAMESPACE}
#  name: ${APPLICATION}-ing
#  labels:
#    app: ${APPLICATION}
#    run: ${ENVIRONMENT}
#  annotations:
#    nginx.ingress.kubernetes.io/app-root: ${APPLICATION_HOME}
#spec:
#  tls:
#  - hosts:
#    - ${APPLICATION_URL}
#  rules:
#  - host: ${APPLICATION_URL}
#    http:
#      paths:
#      - path: ${APPLICATION_HOME}
#        backend:
#          serviceName: ${APPLICATION}-svc
#          servicePort: ${BACKEND_PORT}
