yaml/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ${APPLICATION}-ingress
  namespace: ${PACKAGE}
  labels:
    app: ${APPLICATION}
    env: ${ENVIRONMENT}
  annotations:
    nginx.ingress.kubernetes.io/app-root: ${APP_ENDPOINT_PATH} 
spec:
  tls:
  - hosts:
    - ${APP_ENDPOINT_URL}
  rules:
  - host: ${APP_ENDPOINT_URL}
    http:
      paths:
      - path: ${APP_ENDPOINT_PATH}
        backend:
          serviceName: ${APPLICATION}-service
          servicePort: ${APP_BACKEND_PORT}
