yaml/kube-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ${APPLICATION}-deploy
  namespace: ${PACKAGE}
  labels:
    app: ${APPLICATION}
    env: ${ENVIRONMENT}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION}
      env: ${ENVIRONMENT}
  template:
    metadata:
      labels:
        app: ${APPLICATION}
        env: ${ENVIRONMENT}
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "1234"
    spec:
      containers:
      - name: ${APPLICATION}-container
        image: ${DOCKER_IMAGE}
        imagePullPolicy: Always
        ports:
        - containerPort: ${APP_BACKEND_PORT}

---
kind: Service
apiVersion: v1
metadata:
  name: ${APPLICATION}-service
  namespace: ${PACKAGE}
  labels:
    app: ${APPLICATION}
    env: ${ENVIRONMENT}
spec:
  selector:
     app: ${APPLICATION}
     env: ${ENVIRONMENT}
  ports:
    - name: http
      port: ${APP_BACKEND_PORT}

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ${APPLICATION}-ingress
  namespace: ${PACKAGE}
  labels:
    app: ${APPLICATION}
    env: ${ENVIRONMENT}
  annotations:
    nginx.ingress.kubernetes.io/app-root: ${APP_ENDPOINT_PATH}
spec:
  tls:
  - hosts:
    - ${APP_ENDPOINT_URL}
  rules:
  - host: ${APP_ENDPOINT_URL}
    http:
      paths:
      - path: ${APP_ENDPOINT_PATH}
        backend:
          serviceName: ${APPLICATION}-service
          servicePort: ${APP_BACKEND_PORT}
